hw1 without vovochka

--- a/TestCourse/release/quadratic/quadratic_exercise.ipynb
+++ b/TestCourse/release/quadratic/quadratic_exercise.ipynb
@@ -124,11 +124,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9b05e47c01c714d03d57ada6d6f3e6d1",
+     "checksum": "a2dc214b0c7f4fff3fb016493ad73437",
      "grade": true,
      "grade_id": "cell-89cf7badb387b0e0",
      "locked": true,
-     "points": 2,
+     "points": 1,
      "schema_version": 3,
      "solution": false
     }
@@ -143,13 +143,36 @@
     "\n",
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    print(allclose(x1*x2, var['c']))\n",
-    "\n",
-    "hidden_variants = [{'b': 1e10, 'c': 3.0}, {'b': -1e10, 'c': 4.0},]\n",
-    "for var in hidden_variants:\n",
-    "    x1, x2 = solve_quad(**var)\n",
-    "    allclose(x1*x2, var['c'])"
+    "    assert x1*x2 == var['c']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "5e41a6bc2d92885f38b62744ff401e6d",
+     "grade": true,
+     "grade_id": "cell-0970e4298cb77486",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
