--- a/TestCourse/autograded/vivanov/quadratic/quadratic_exercise.ipynb
+++ b/TestCourse/autograded/vivanov/quadratic/quadratic_exercise.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAME = \"Vovochka\"\n",
-    "COLLABORATORS = \"Mr Smith\""
+    "NAME = \"Vova\"\n",
+    "COLLABORATORS = \"\""
    ]
   },
   {
@@ -112,8 +112,17 @@
     "    -------\n",
     "    x1, x2 : float or complex\n",
     "    Roots.'''\n",
-    "    d = (b ** 2 - 4 * c)**0.5\n",
-    "    return (-b+d)/2, (-b-d)/2\n",
+    "    if abs(b)>10**5:\n",
+    "        x1 = -c/b; x2=-b\n",
+    "        return x1,x2\n",
+    "    else:\n",
+    "        d = b ** 2 - 4 * c\n",
+    "        \n",
+    "    a = -b / 2 \n",
+    "    b = abs(d**0.5) / 2 \n",
+    "    ANS = [complex(a,-b), complex(a,b)] if d<0 else [float(a)+float(-b) , float(a)-float(-b)]\n",
+    "    return ANS[0], ANS[1]\n",
+    "\n",
     "    raise NotImplementedError()"
    ]
   },
@@ -125,26 +134,16 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9b05e47c01c714d03d57ada6d6f3e6d1",
+     "checksum": "a2dc214b0c7f4fff3fb016493ad73437",
      "grade": true,
      "grade_id": "cell-89cf7badb387b0e0",
      "locked": true,
-     "points": 2,
+     "points": 1,
      "schema_version": 3,
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy import allclose\n",
     "\n",
@@ -154,13 +153,43 @@
     "\n",
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    print(allclose(x1*x2, var['c']))\n",
-    "\n",
+    "    assert x1*x2 == var['c']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "6a459793f50b499c3365104d3b3e18df",
+     "grade": true,
+     "grade_id": "cell-0970e4298cb77486",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### BEGIN HIDDEN TESTS\n",
     "hidden_variants = [{'b': 1e10, 'c': 3.0}, {'b': -1e10, 'c': 4.0},]\n",
     "for var in hidden_variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    allclose(x1*x2, var['c'])"
+    "    assert x1*x2 == var['c']\n",
+    "### END HIDDEN TESTS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
