--- a/TestCourse/source/quadratic/quadratic_exercise.ipynb
+++ b/TestCourse/source/quadratic/quadratic_exercise.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -78,7 +78,6 @@
     "        return x1,x2\n",
     "    else:\n",
     "        d = b ** 2 - 4 * c\n",
-    "        \n",
     "    a = -b / 2 \n",
     "    b = abs(d**0.5) / 2 \n",
     "    ANS = [complex(a,-b), complex(a,b)] if d<0 else [float(a)+float(-b) , float(a)-float(-b)]\n",
@@ -88,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": true,
      "grade_id": "cell-89cf7badb387b0e0",
      "locked": true,
-     "points": 2,
+     "points": 1,
      "schema_version": 3,
      "solution": false
     }
@@ -109,13 +108,39 @@
     "\n",
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    print(allclose(x1*x2, var['c']))\n",
-    "\n",
+    "    assert x1*x2 == var['c']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-0970e4298cb77486",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### BEGIN HIDDEN TESTS\n",
     "hidden_variants = [{'b': 1e10, 'c': 3.0}, {'b': -1e10, 'c': 4.0},]\n",
     "for var in hidden_variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    allclose(x1*x2, var['c'])"
+    "    assert x1*x2 == var['c']\n",
+    "### END HIDDEN TESTS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
