--- a/TestCourse/submitted/vivanov/quadratic/quadratic_exercise.ipynb
+++ b/TestCourse/submitted/vivanov/quadratic/quadratic_exercise.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAME = \"Vovochka\"\n",
-    "COLLABORATORS = \"Mr Smith\""
+    "NAME = \"Vova\"\n",
+    "COLLABORATORS = \"\""
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -112,24 +112,33 @@
     "    -------\n",
     "    x1, x2 : float or complex\n",
     "    Roots.'''\n",
-    "    d = (b ** 2 - 4 * c)**0.5\n",
-    "    return (-b+d)/2, (-b-d)/2\n",
+    "    if abs(b)>10**5:\n",
+    "        x1 = -c/b; x2=-b\n",
+    "        return x1,x2\n",
+    "    else:\n",
+    "        d = b ** 2 - 4 * c\n",
+    "        \n",
+    "    a = -b / 2 \n",
+    "    b = abs(d**0.5) / 2 \n",
+    "    ANS = [complex(a,-b), complex(a,b)] if d<0 else [float(a)+float(-b) , float(a)-float(-b)]\n",
+    "    return ANS[0], ANS[1]\n",
+    "\n",
     "    raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7509c56c75b34e9d04c1c429fdbd0290",
+     "checksum": "a2dc214b0c7f4fff3fb016493ad73437",
      "grade": true,
      "grade_id": "cell-89cf7badb387b0e0",
      "locked": true,
-     "points": 2,
+     "points": 1,
      "schema_version": 3,
      "solution": false
     }
@@ -144,8 +153,36 @@
     "\n",
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    print(allclose(x1*x2, var['c']))\n"
+    "    assert x1*x2 == var['c']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "5e41a6bc2d92885f38b62744ff401e6d",
+     "grade": true,
+     "grade_id": "cell-0970e4298cb77486",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
