--- a/TestCourse/release/Householder_QR/week_2_Householder_QR.ipynb
+++ b/TestCourse/release/Householder_QR/week_2_Householder_QR.ipynb
@@ -179,7 +179,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "63bcd3c131d7240f815ed4596761c8d8",
+     "checksum": "41d9b94511a3436898c87426577b1094",
      "grade": true,
      "grade_id": "cell-bbe4e0fdd8cb66ae",
      "locked": true,
@@ -193,12 +193,13 @@
    "source": [
     "# Test I.2 (10% итоговой оценки).\n",
     "\n",
-    "rndm = np.random.RandomState(1234)\n",
-    "\n",
-    "vec = rndm.uniform(size=7)\n",
+    "np.random.seed()\n",
+    "vec = np.random.uniform(size=7)\n",
     "v1, h = householder(vec)\n",
     "\n",
-    "assert np.allclose(np.dot(h, v1), vec)"
+    "assert np.allclose(np.dot(h, v1), vec)\n",
+    "assert np.allclose(np.dot(h, vec), v1)\n",
+    "assert np.linalg.norm(v1[1:])==0"
    ]
   },
   {
@@ -413,7 +414,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "2a4c827e06a49e8bcf1f5888a36a97c4",
+     "checksum": "b25bd3d71fb51d798a091074b4878336",
      "grade": false,
      "grade_id": "cell-28b501b4a2cd3dc1",
      "locked": true,
@@ -435,9 +436,11 @@
     "\n",
     "Напишите функцию, выполняющую QR - разложение матрицы без формирования матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектор отражения.\n",
     "\n",
-    "Напишите вторую функцию, которая использует вектор отражения чтобы перемножить матрицу с $\\mathbf{Q}^T$. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. Напишите тесты.\n",
+    "(20% итоговой оценки)\n",
     "\n",
-    "(40% итоговой оценки)\n"
+    "Напишите вторую функцию, которая использует вектор отражения чтобы перемножить матрицу с $\\mathbf{Q}^T$. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. \n",
+    "\n",
+    "(20% итоговой оценки)\n"
    ]
   },
   {
@@ -447,11 +450,10 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "f77a89cb78b3cb2180bf8c2776111c79",
-     "grade": true,
+     "checksum": "d1955333adaa5c83a680a05988458d66",
+     "grade": false,
      "grade_id": "cell-5360f8930eabe0b4",
      "locked": false,
-     "points": 4,
      "schema_version": 3,
      "solution": true,
      "task": false
@@ -459,8 +461,64 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def Qu(a):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "def aU_to_R(a, U):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "8d6d9bf0f2079652d3c8bf485189247f",
+     "grade": true,
+     "grade_id": "cell-68363e2462de3a8b",
+     "locked": true,
+     "points": 2,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "name1 = \"Test 1: square matrix\"\n",
+    "a = rndm.uniform(size=(5,5))\n",
+    "R1, U = Qu(a)\n",
+    "R2 = aU_to_R(a, U)\n",
+    "R_lib = qr(a)[1]\n",
+    "assert np.allclose(R1, R2), 'Falied in'+name1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "5c02f40f835a9b77398e811ccbdae011",
+     "grade": true,
+     "grade_id": "cell-159c6803d580116d",
+     "locked": true,
+     "points": 2,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "assert False not in [np.allclose(R2[i,:],R_lib[i,:]) or np.allclose(R2[i,:],-R_lib[i,:]) for i in range(5)]"
    ]
   }
  ],
