--- a/TestCourse/release/LU_pivoting/week_1_LU_pivoting.ipynb
+++ b/TestCourse/release/LU_pivoting/week_1_LU_pivoting.ipynb
@@ -438,7 +438,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "5c16e067cc821d2255bcf87d2be2bb14",
+     "checksum": "183c3e2a265d35a33a85b49ad9ba0ccd",
      "grade": false,
      "grade_id": "cell-703a27f2e76339e7",
      "locked": false,
@@ -460,7 +460,7 @@
     "    P, L, U : where P is a permutation matrix, \n",
     "    L lower triangular with unit diagonal elements, and U upper triangular.'''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    raise NotImplementedError()\n"
    ]
   },
   {
@@ -471,7 +471,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "990cf6238e836f28ff6019674e64e543",
+     "checksum": "dcca3bc3d344fbd1f4844e2880585ca2",
      "grade": true,
      "grade_id": "cell-eacc7aa962410524",
      "locked": true,
@@ -485,7 +485,7 @@
    "source": [
     "P, L, U = diy_lu_mod(a)\n",
     "P1, L1, U1 = diy_lu_mod(a1)\n",
-    "assert np.allclose([a,a1], [P@L@U, P1@L1@U1]), \"Decomposition doesn't reconstructs the initial matrix\""
+    "assert np.allclose([a,a1], [P@L@U, P1@L1@U1]), \"Decomposition doesn't reconstruct the initial matrix\""
    ]
   },
   {
