--- a/TestCourse/submitted/jupyter-grader1/Numpy/Assignment 1.ipynb
+++ b/TestCourse/submitted/jupyter-grader1/Numpy/Assignment 1.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -109,7 +109,7 @@
    "source": [
     "def null_vec():\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    a = np.empty(12)\n",
     "    return a"
    ]
   },
